@@ -1,3 +1,9 @@
+2003-02-22  Havoc Pennington  <hp@pobox.com>
+
+	* src/display.c (event_callback): fix to unfocus window only when 
+	you leave the window frame, not when you leave the window itself, 
+	unless window has no frame. #100248 fix from Orien Vandenbergh
+
 2003-02-20  Havoc Pennington  <hp@redhat.com>
 
 	* src/stack.c (create_constraints): don't create constraints
